--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint --fix .",
-    "format": "prettier --write '**/*.{ts,js,vue,css,html,json}'"
+    "format": "prettier --write '**/*.{ts,js,vue,css,html,json}'",
+    "preview": "http-server ./dist/ -p 1234 -c-1"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -24,6 +25,7 @@
     "eslint": "^7.28.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-vue": "^7.10.0",
+    "http-server": "^14.0.0",
     "mockjs": "^1.1.0",
     "prettier": "^2.3.1",
     "typescript": "^4.3.2",
